chart/ingressroute-argocd-traefik.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-http
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`argocd.michaeltarriman.work`)
      priority: 10
      middlewares:
        - name: argocd-redirect-scheme      
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argocd.michaeltarriman.work`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      middlewares:
        - name: argocd-redirect-scheme         
      services:
        - name: argocd-server
          port: 80
          scheme: h2c


---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.michaeltarriman.work`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argocd.michaeltarriman.work`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    certResolver: letsencrypt


---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: argocd-redirect-scheme
  namespace: argocd
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: "443"
